@@ -1,14 +1,0 @@
-package Net::Statsd::Lite::Types;
-
-# ABSTRACT: A type library for Net::Statsd::Lite
-
-use strict;
-use warnings;
-
-=head1 DESCRIPTION
-
-The custom type library is no longer used.
-
-=cut
-
-1;
