@@ -1,6 +1,9 @@
 Revision history for Net-Statsd-Lite
 
 {{$NEXT}}
+  [Enhancements]
+  - Removed stub unused types library.
+
   [Documentation]
   - Fixed typos in Changes.
 
